--- a/cost_management_asset_dbt/models/staging/tests.yml
+++ b/cost_management_asset_dbt/models/staging/tests.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: stg_snowflake_queries
+  - name: stg_query_history
     description: "Staging model for Snowflake query history"
     columns:
       - name: query_id
@@ -9,4 +9,4 @@ models:
         tests:
           - unique
           - not_null
-    
+  
