- change refined name to curated - remove ref_example.sql - add filters in curated models

--- a/cost_management_asset_dbt/dbt_project.yml
+++ b/cost_management_asset_dbt/dbt_project.yml
@@ -18,4 +18,10 @@ clean-targets:
 models:
   cost_management_asset_dbt:
     intermediate:
+      +schema: intermediate
       +materialized: view
+    curated:
+      +schema: refined
+      +materialized: table
+
+
