- changes after kenneth meeting - now using 3 models: stg, int, and curated

--- a/cost_management_asset_dbt/dbt_project.yml
+++ b/cost_management_asset_dbt/dbt_project.yml
@@ -17,11 +17,12 @@ clean-targets:
 
 models:
   cost_management_asset_dbt:
+    staging:
+      +schema: staging
+      +materialized: table
     intermediate:
       +schema: intermediate
       +materialized: view
     curated:
-      +schema: refined
-      +materialized: table
-
-
+      +schema: curated
+      +materialized: view
